2012-05-16  Philippe Roussel  <p.o.roussel@free.fr>

       * Player.m
       * Player.h
       Fix crashes when seeking through a file when using a threaded
       backend. In this case the input stream is accessed from at
       least two threads and so must be protected by a lock.

2012-05-15 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Playlist.m
	  just skip duplicate songs when loading playlists or 
	  trying to add a song already in the playlist instead
	  of throwing an exception and aborting

2012-05-14 Philippe Roussel

	* Bundles/Timidity/Timidity.m
	  do not crash when loading a .mid file
	  without having timidity installed

2012-05-14 Philippe Roussel

	* Song.m
	Proper isEqual compare.

	* PlaylistController.m
	Fix playlist and bundle loading.

2012-05-13 Philippe Roussel

	* Playlist.m
	* Song.m
	* Bundles/Esound/EsoundPreference.m
	* Bundles/OSS/OSS.h
	* Bundles/WindowsMedia/CWMFile.cpp
	Fix

	* Bundles/Esound/Esound.m
	Conform to new protocol

	* Bundles/Ogg/Ogg.m
	Endianness to native.

2012-05-13 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Sndio/Sndio.[h|m]
	handle media-endianness given in the media bundles.

2012-05-13 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Timidity/Timidity.m
	Default eniannessd needs to be native, otherwise
	macppc play garbage
	Use relative name to find timidity binary
	Switch buffer size from 65536 to DEFAULT_BUFFER_SIZE
	defined in Output.h

2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Bundles/FLAC/FLAC.m
	* Bundles/Mod/Mod.m
	* Bundles/Musepack/Musepack.m
	Set default endianness to native.

2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Bundles/WindowsMedia/WindowsMedia.m
	Set endianness to native.

2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Player.h
	* Player.m
	* Bundles/ALSA/ALSA.h
	* Bundles/ALSA/ALSA.m
	* Bundles/AO/ao.m
	* Bundles/AudioFile/AudioFile.m
	* Bundles/MP3/MP3.m
	* Bundles/OSS/OSS.h
	* Bundles/OSS/OSS.m
	* Bundles/WindowsMedia/WindowsMedia.m